# triton-prototype

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  LICENSE  README.md  constants.py  main.py  pyproject.toml  tasks.py
model_repository/resnet18/: config.pbtxt
